--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,162 @@
 aiodns==3.0.0
-aiohttp==3.8.3
+aiohttp==3.8.1
 aiortsp==1.3.6
-aiosignal==1.3.1
+aiosignal==1.2.0
+anyio==3.6.2
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asn1crypto==0.24.0
 async-timeout==4.0.2
+asynctest==0.13.0
 attrs==22.1.0
-av==10.0.0
-bidict==0.22.1
+av==9.2.0
+backcall==0.2.0
+beautifulsoup4==4.11.2
+bleach==6.0.0
+blinker==1.4
+Brlapi==0.6.6
 Brotli==1.0.9
 cchardet==2.1.7
+certifi==2018.1.18
 cffi==1.15.1
-charset-normalizer==2.1.1
+chardet==3.0.4
+charset-normalizer==2.1.0
 click==8.1.3
-dpkt==1.9.8
-Flask==2.2.2
-Flask-SocketIO==5.3.2
-frozenlist==1.3.3
+colorama==0.3.7
+cryptography==2.1.4
+cupshelpers==1.0
+cycler==0.11.0
+debugpy==1.6.6
+decorator==4.1.2
+defer==1.0.6
+defusedxml==0.7.1
+distro-info===0.18ubuntu0.18.04.1
+dpkt==1.9.7.2
+entrypoints==0.4
+fastjsonschema==2.16.3
+Flask==2.2.1
+Flask-SQLAlchemy==2.1
+fonttools==4.38.0
+frozenlist==1.3.1
+greenlet==1.1.2
+httplib2==0.9.2
 idna==3.4
 ifaddr==0.2.0
-importlib-metadata==5.1.0
+importlib-metadata==4.12.0
+importlib-resources==5.12.0
+ipykernel==6.16.2
+ipython==7.34.0
+ipython_genutils==0.2.0
+ipywidgets==8.0.4
 itsdangerous==2.1.2
+jedi==0.18.2
 Jinja2==3.1.2
+jsonschema==4.17.3
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-server==1.23.6
+jupyter_client==7.4.9
+jupyter_core==4.12.0
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.5
+kazam==1.4.5
+keyring==10.6.0
+keyrings.alt==3.0
+kiwisolver==1.4.4
+language-selector==0.1
+launchpadlib==1.10.6
+lazr.restfulclient==0.13.5
+lazr.uri==1.0.3
+louis==3.5.0
+macaroonbakery==1.1.3
+Mako==1.0.7
 MarkupSafe==2.1.1
+matplotlib==3.5.3
+matplotlib-inline==0.1.6
+mistune==2.0.5
 multidict==6.0.2
-numpy==1.23.5
+nbclassic==0.5.3
+nbclient==0.7.2
+nbconvert==7.2.10
+nbformat==5.7.3
+nest-asyncio==1.5.6
+netifaces==0.10.4
+notebook==6.5.3
+notebook_shim==0.2.2
+nptyping==1.4.4
+numpy==1.21.6
+oauth==1.0.1
+olefile==0.45.1
 opencv-python==4.6.0.66
-pupil-apriltags==1.0.4.post10
-pupil-labs-realtime-api==1.1.1
-pycares==4.2.2
+packaging==23.0
+pandocfilters==1.5.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.2.0
+pkgutil_resolve_name==1.3.10
+prometheus-client==0.16.0
+prompt-toolkit==3.0.38
+protobuf==3.0.0
+psutil==5.9.4
+psycopg2-binary==2.9.6
+ptyprocess==0.7.0
+pupil-apriltags==1.0.4
+pupil-labs-realtime-api==1.0.1
+pycairo==1.16.2
+pycares==4.2.1
 pycparser==2.21
-python-engineio==4.3.4
-python-socketio==5.7.2
-websockets==10.4
-Werkzeug==2.2.2
+pycrypto==2.6.1
+pycups==1.9.73
+Pygments==2.14.0
+PyGObject==3.26.1
+pyinotify==0.9.6
+pymacaroons==0.13.0
+PyNaCl==1.1.2
+pyOpenSSL==17.5.0
+pyparsing==3.0.9
+pyRFC3339==1.0
+pyrsistent==0.19.3
+python-apt==1.6.6
+python-dateutil==2.8.2
+python-debian==0.1.32
+pytz==2018.3
+pyxdg==0.25
+PyYAML==3.12
+pyzmq==25.0.1
+qtconsole==5.4.1
+QtPy==2.3.0
+reportlab==3.4.0
+requests==2.18.4
+requests-unixsocket==0.1.5
+SecretStorage==2.3.1
+Send2Trash==1.8.0
+simplejson==3.13.2
+six==1.11.0
+sniffio==1.3.0
+soupsieve==2.4
+SQLAlchemy==1.1.11
+system-service==0.3
+systemd-python==234
+terminado==0.17.1
+tinycss2==1.2.1
+tornado==6.2
+traitlets==5.9.0
+typing_extensions==4.3.0
+typish==1.9.3
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.22
+usb-creator==0.3.3
+wadllib==1.3.2
+wcwidth==0.2.6
+webencodings==0.5.1
+websocket-client==1.5.1
+websockets==10.3
+Werkzeug==2.2.1
+widgetsnbextension==4.0.5
+xkit==0.0.0
 yarl==1.8.1
-zeroconf==0.39.4
-zipp==3.10.0
+zeroconf==0.38.7
+zipp==3.8.1
+zope.interface==4.3.2
