--- a/requirements-mac.txt
+++ b/requirements-mac.txt
@@ -22,7 +22,7 @@ chardet==3.0.4
 charset-normalizer==2.1.0
 click==8.1.3
 colorama==0.3.7
-cryptography==2.1.4
+cryptography
 cycler==0.11.0
 debugpy==1.6.6
 decorator==4.1.2
@@ -76,11 +76,11 @@ nbclient==0.7.2
 nbconvert==7.2.10
 nbformat==5.7.3
 nest-asyncio==1.5.6
-netifaces==0.10.4
+netifaces
 notebook==6.5.3
 notebook_shim==0.2.2
 nptyping==1.4.4
-numpy==1.21.6
+numpy
 oauth==1.0.1
 olefile==0.45.1
 opencv-python
