--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,7 @@ distro-info===0.18ubuntu0.18.04.1
 dpkt==1.9.7.2
 entrypoints==0.4
 fastjsonschema==2.16.3
-Flask==2.2.1
+Flask~=3.0.0
 Flask-SQLAlchemy==2.1
 fonttools==4.38.0
 frozenlist==1.3.1
@@ -77,10 +77,10 @@ netifaces==0.10.4
 notebook==6.5.3
 notebook_shim==0.2.2
 nptyping==1.4.4
-numpy==1.21.6
+numpy~=1.26.2
 oauth==1.0.1
 olefile==0.45.1
-opencv-python==4.6.0.66
+opencv-python~=4.8.1.78
 packaging==23.0
 pandocfilters==1.5.0
 parso==0.8.3
@@ -120,7 +120,7 @@ pyzmq==25.0.1
 qtconsole==5.4.1
 QtPy==2.3.0
 reportlab==3.4.0
-requests==2.18.4
+requests~=2.31.0
 requests-unixsocket==0.1.5
 SecretStorage==2.3.1
 Send2Trash==1.8.0
@@ -128,7 +128,7 @@ simplejson==3.13.2
 six==1.11.0
 sniffio==1.3.0
 soupsieve==2.4
-SQLAlchemy==1.1.11
+SQLAlchemy~=2.0.23
 system-service==0.3
 systemd-python==234
 terminado==0.17.1
@@ -146,7 +146,7 @@ wcwidth==0.2.6
 webencodings==0.5.1
 websocket-client==1.5.1
 websockets==10.3
-Werkzeug==2.2.1
+Werkzeug~=3.0.1
 widgetsnbextension==4.0.5
 xkit==0.0.0
 yarl==1.8.1
@@ -156,3 +156,9 @@ zope.interface==4.3.2
 wtforms==3.1.1
 flask_wtf==1.2.1
 ffmpeg-python==0.2.0
+Flask-SocketIO~=5.3.6
+Flask-Bootstrap~=3.3.7.1
+Flask-Login~=0.6.3
+setuptools~=68.2.0
+graphviz~=0.20.3
+Flask-Bcrypt~=1.0.1
