--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ blinker==1.9.0
 certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.1.8
+dnspython==2.7.0
 dominate==2.9.1
+eventlet==0.40.0
 ffmpeg==1.4
 Flask==3.1.0
 Flask-Bcrypt==1.0.1
@@ -14,6 +16,7 @@ flask-redis==0.4.0
 Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
+greenlet==3.2.2
 gunicorn==23.0.0
 h11==0.16.0
 idna==3.10
